# Civilization

./: .gitignore  README.md  game.py  greedy_agent.py  main.py  map.py  planned_search_agent.py  pyproject.toml  random_agent.py  run_gui.py  search_eval.py  search_prune.py  search_rules.py  课程设计报告.md
.github/workflows/: ci.yml
agents/: __init__.py  factory.py  greedy.py  random.py
data/: README.md
docs/: README.md
docs/experiments/: seed_scores.csv
engine/: __init__.py  actions.py  game.py  map.py  models.py  save.py  terminal_save.py
il/: __init__.py  action_value.py  encoding.py  hard_seeds.py  improve.py  improve_hard.py  learned_agent.py  model.py  record_dagger.py  record_expert.py  run_pipeline.py  train.py
scripts/: benchmark.py  gen_section9.py  split_pygame_app.py
search/: __init__.py  agent.py  eval.py  prune.py  rules.py
tests/: test_building_placement.py  test_factory.py  test_game.py  test_gui_prefs.py  test_hard_seeds.py  test_il.py  test_main.py  test_map.py  test_models.py  test_planned_search.py  test_save.py  test_search_eval.py  test_search_prune.py  test_search_rules.py  test_terminal_save.py
ui/: __init__.py  app.py  app_draw.py  app_gameplay.py  app_input.py  app_loop.py  assets.py  draw.py  gui_format.py  gui_types.py  particles.py  prefs.py  pygame_app.py  sharp.py  theme.py
